force-app/main/default/objects/Dispute_Integration_Logs__c/Dispute_Integration_Logs__c.object-meta.xml
<CustomObject>
    <label>Dispute Integration Log</label>
    <nameField>
        <label>Dispute Integration Logs	 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dispute Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>