force-app/main/default/objects/Dispute_Integration_Logs__c/fields/caseNumber__c.field-meta.xml
<CustomField>
    <fullName>caseNumber__c</fullName>
    <label>CaseNumber</label>
    <length>30</length>
    <type>Text</type>
</CustomField>