force-app/main/default/objects/Dispute_Integration_Logs__c/fields/CCAD_Dispute_Nbr__c.field-meta.xml
<CustomField>
    <fullName>CCAD_Dispute_Nbr__c</fullName>
    <externalId>true</externalId>
    <label>CCAD Dispute Nbr</label>
    <length>20</length>
    <type>Text</type>
</CustomField>