force-app/main/default/objects/Dispute_Integration_Logs__c/fields/RequestType__c.field-meta.xml
<CustomField>
    <fullName>RequestType__c</fullName>
    <label>RequestType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>